[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/blackhole-bb/BlackHoleBB_ital.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PlanetTile/Market/MarketInterface.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/airstream-futuropolis/Airstream Futuropolis Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 3 )

[node name="MarketInterface" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -394.0
margin_bottom = -234.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 630.0
margin_bottom = 366.0

[node name="Title" type="Label" parent="Margin/VBox"]
margin_right = 630.0
margin_bottom = 12.0
text = "Marketplace"
align = 1

[node name="MarketTabs" type="TabContainer" parent="Margin/VBox"]
margin_top = 16.0
margin_right = 630.0
margin_bottom = 366.0
size_flags_vertical = 3
tabs_visible = false

[node name="Offers" type="HBoxContainer" parent="Margin/VBox/MarketTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginLeft" type="MarginContainer" parent="Margin/VBox/MarketTabs/Offers"]
margin_right = 120.0
margin_bottom = 338.0
rect_min_size = Vector2( 120, 0 )
custom_constants/margin_right = 5
custom_constants/margin_top = 10

[node name="ProductList" type="Tree" parent="Margin/VBox/MarketTabs/Offers/MarginLeft"]
margin_top = 10.0
margin_right = 115.0
margin_bottom = 338.0
size_flags_horizontal = 3

[node name="MarginRight" type="MarginContainer" parent="Margin/VBox/MarketTabs/Offers"]
margin_left = 124.0
margin_right = 622.0
margin_bottom = 338.0
size_flags_horizontal = 3

[node name="RightVBox" type="VBoxContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight"]
margin_right = 498.0
margin_bottom = 338.0

[node name="Label" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox"]
margin_right = 498.0
margin_bottom = 12.0
text = "Offer List"
align = 1

[node name="TabContainer" type="TabContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox"]
margin_top = 16.0
margin_right = 498.0
margin_bottom = 338.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )

[node name="Offers" type="Tabs" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0

[node name="OfferVBox" type="VBoxContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Offers" type="Tree" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox"]
margin_right = 490.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OfferDetails" type="Panel" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox"]
margin_top = 145.0
margin_right = 490.0
margin_bottom = 287.0
size_flags_vertical = 3

[node name="ODMargin" type="MarginContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 480.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox"]
margin_right = 470.0
margin_bottom = 12.0
text = "Offer Information"
align = 1

[node name="OfferInfo" type="GridContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox"]
margin_top = 16.0
margin_right = 470.0
margin_bottom = 96.0
columns = 2

[node name="LblProduct" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_right = 93.0
margin_bottom = 12.0
text = "Product Name: "

[node name="LblProductData" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_left = 97.0
margin_right = 194.0
margin_bottom = 12.0
text = "Product #1"

[node name="LblQuantity" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_top = 21.0
margin_right = 93.0
margin_bottom = 33.0
text = "Quantity: "

[node name="QuantityData" type="SpinBox" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_left = 97.0
margin_top = 16.0
margin_right = 194.0
margin_bottom = 38.0

[node name="LblPrice" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_top = 47.0
margin_right = 93.0
margin_bottom = 59.0
text = "Price per unit: "

[node name="PriceData" type="SpinBox" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_left = 97.0
margin_top = 42.0
margin_right = 194.0
margin_bottom = 64.0

[node name="LblCost" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_top = 68.0
margin_right = 93.0
margin_bottom = 80.0
text = "Total Cost: "

[node name="LblCostData" type="Label" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/OfferInfo"]
margin_left = 97.0
margin_top = 68.0
margin_right = 194.0
margin_bottom = 80.0
text = "103 567 Credits"

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox"]
margin_top = 100.0
margin_right = 470.0
margin_bottom = 118.0

[node name="CreateOffer" type="Button" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/HBox"]
margin_left = 276.0
margin_right = 371.0
margin_bottom = 18.0
size_flags_horizontal = 10
text = "Create Offer"

[node name="CancelOffer" type="Button" parent="Margin/VBox/MarketTabs/Offers/MarginRight/RightVBox/TabContainer/Offers/OfferVBox/OfferDetails/ODMargin/VBox/HBox"]
margin_left = 375.0
margin_right = 470.0
margin_bottom = 18.0
size_flags_horizontal = 0
text = "Cancel Offer"

[node name="Button" type="Button" parent="."]
margin_left = 437.079
margin_top = 29.9369
margin_right = 549.079
margin_bottom = 47.9369
text = "Simulate Orders"
